# ai-desktop-helper

./: .gitignore  CMakeLists.txt  README.md  resources.qrc  vcpkg.json
src/: common.h  floatingball.cpp  floatingball.h  main.cpp  networkmanager.cpp  networkmanager.h  screenmonitor.cpp  screenmonitor.h  settingsdialog.cpp  settingsdialog.h  trayicon.cpp  trayicon.h
src/models/dashscope/: test_request_ai.cpp
src/settingsdialog/: appFilterWidget.cpp  appFilterWidget.h  recordingwidget.cpp  recordingwidget.h  settingsdialog.cpp  settingsdialog.h  settingsnavigationbar.cpp  settingsnavigationbar.h
